--- a/drifter.ipynb
+++ b/drifter.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "# Python-based Libraries\n",
     "from datetime import timedelta, datetime\n",
+    "from pathlib import Path\n",
+    "import os\n",
     "\n",
     "# Data Analysis Libraries\n",
     "import pandas as pd\n",
@@ -33,8 +35,90 @@
     "        self.data = {}\n",
     "        self.data_info = {}\n",
     "        \n",
-    "    def read_data(self):\n",
-    "        pass\n",
+    "    def read_data(self, path):\n",
+    "        # Define Possible encodings\n",
+    "        encodings = [\"UTF-8\", \"UTF-16 LE\"]\n",
+    "\n",
+    "        # Check if path is a filepath or directory path\n",
+    "        if Path(path).is_file(): \n",
+    "            # Get file name from path\n",
+    "            path = path.replace\n",
+    "            filename = path.split('/')[-1].split('.')[-2] \n",
+    "            # Define a variable to track file decoding\n",
+    "            encoding_gotten = False\n",
+    "            for encoding_value in encodings:\n",
+    "                try:\n",
+    "                    data_value = pd.read_csv(path, encoding=encoding_value)\n",
+    "                    # Catch special errors whereby the encoding is wrong but the data is read.\n",
+    "                    if \"Unnamed: 1\" in data_value.columns: \n",
+    "                        continue\n",
+    "                    encoding_gotten = True\n",
+    "                    break # Stop trying if the options had worked\n",
+    "                except:\n",
+    "                    pass # Continue trying if the option didn't work\n",
+    "\n",
+    "            if encoding_gotten == True:\n",
+    "                data_to_keep = [['DeviceDateTime','Latitude','Longitude'], \n",
+    "                            ['Position time (UTC)', 'Latitude (°)', 'Longitude (°)'],\n",
+    "                            ]\n",
+    "                for dtk_val in data_to_keep:\n",
+    "                    try:\n",
+    "                        # Select Data to Keep\n",
+    "                        data_value = data_value[dtk_val]\n",
+    "                        # Rename Header Columns\n",
+    "                        data_value.columns = ['DateTime','Latitude','Longitude']\n",
+    "                        # Convert DateTime\n",
+    "                        data_value['DateTime'] = pd.to_datetime(data_value['DateTime'])\n",
+    "                        # Store DF in the object instance 'data'\n",
+    "                        self.data[filename] = data_value\n",
+    "                        \n",
+    "                    except:\n",
+    "                        pass\n",
+    "            else:\n",
+    "                print(f\"Encoding error. The encoding for {filename} data should be checked.\")\n",
+    "\n",
+    "        elif Path(path).is_dir():    \n",
+    "        # 1. Read the files in the given path\n",
+    "            file_names = os.listdir(path)\n",
+    "\n",
+    "            # 2. Read each file into pandas dataframe\n",
+    "            for file in file_names:\n",
+    "                filepath = path+'/'+file\n",
+    "                filename = file.split('.')[-2] \n",
+    "                # Define a variable to track file decoding\n",
+    "                encoding_gotten = False\n",
+    "                for encoding_value in encodings:\n",
+    "                    try:\n",
+    "                        data_value = pd.read_csv(filepath, encoding=encoding_value)\n",
+    "                        # Catch special errors whereby the encoding is wrong but the data is read.\n",
+    "                        if \"Unnamed: 1\" in data_value.columns: \n",
+    "                            continue\n",
+    "                        encoding_gotten = True\n",
+    "                        break # Stop trying if the options had worked\n",
+    "                    except:\n",
+    "                        pass # Continue trying if the option didn't work\n",
+    "\n",
+    "                # Store the data in the \"data\" dictionary\n",
+    "                if encoding_gotten == True:\n",
+    "                    data_to_keep = [['DeviceDateTime','Latitude','Longitude'], \n",
+    "                               ['Position time (UTC)', 'Latitude (°)', 'Longitude (°)'],\n",
+    "                                ]\n",
+    "                    for dtk_val in data_to_keep:\n",
+    "                        try:\n",
+    "                            # Select Data to Keep\n",
+    "                            data_value = data_value[dtk_val]\n",
+    "                            # Rename Header Columns\n",
+    "                            data_value.columns = ['DateTime','Latitude','Longitude']\n",
+    "                            # Convert DateTime\n",
+    "                            data_value['DateTime'] = pd.to_datetime(data_value['DateTime'])\n",
+    "                            # Store DF in the object instance 'data'\n",
+    "                            self.data[filename] = data_value\n",
+    "                        \n",
+    "                        except:\n",
+    "                            pass\n",
+    "\n",
+    "                else:\n",
+    "                    print(f\"Encoding error. The encoding for {filepath} data should be checked.\")\n",
     "    \n",
     "    def read_logsheet(self, file_path):\n",
     "        self.logsheet = pd.read_csv(file_path)\n",
@@ -94,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-analysis",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -108,12 +192,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.5 (main, Jun 18 2022, 01:16:30)  [GCC 12.1.0 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "faccf2a0d0d6f24ad133c954b727a3417ecb6a1c20419487847b75b7fcaef0dd"
+    "hash": "2a8dfe095fce2b5e88c64a2c3ee084c8e0e0d70b23e7b95b1cfb538be294c5c8"
    }
   }
  },
