Update the drifter class compute_velocity method

--- a/drifter.ipynb
+++ b/drifter.ipynb
@@ -160,7 +160,31 @@
     "            \n",
     "    \n",
     "    def compute_velocity(self):\n",
-    "        pass\n",
+    "        R = 6373.0\n",
+    "        for key in self.data.keys():\n",
+    "            data = self.data[key]\n",
+    "            # select columns for latitude, longtitude and time\n",
+    "            df_lat = np.array(data[\"Latitude\"])\n",
+    "            df_long = np.array(data[\"Longitude\"])\n",
+    "            df_time = data[\"DateTime\"]\n",
+    "            # df_time = pd.to_datetime(df_time.astype(str), format='%H:%M:%S')\n",
+    "            \n",
+    "            # compute delta time\n",
+    "            d_time = np.array(df_time[1:]) - df_time[:-1]\n",
+    "            d_time = d_time.apply(lambda dt_i : dt_i.seconds/60.0)\n",
+    "            \n",
+    "            # compute distance from lat,long\n",
+    "            rad_lat = np.radians(df_lat)\n",
+    "            rad_long = np.radians(df_long)\n",
+    "            d_lat = rad_lat[1:] - np.array(rad_lat[:-1])\n",
+    "            d_long = rad_long[1:] - np.array(rad_long[:-1]) \n",
+    "            \n",
+    "            a = np.sin(d_lat / 2.0)**2 + np.cos(rad_lat[:-1]) * np.cos(rad_lat[1:]) * np.sin(d_long / 2)**2\n",
+    "            c = 2.0 * np.arctan2(np.sqrt(a), np.sqrt(1 - a))\n",
+    "\n",
+    "            distance = R * c\n",
+    "            velocity = distance*1000.0/60.0/np.array(d_time, dtype=float)\n",
+    "            data[\"Velocity\"] = pd.Series(np.append(0.0, velocity))\n",
     "    \n",
     "    def plot_trajectory(self):\n",
     "        pass\n",
