Creating function for reading logsheet (in progress)

--- a/drifter.ipynb
+++ b/drifter.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Importing Libraries\n",
     "\n",
     "# Python-based Libraries\n",
-    "\n",
+    "from datetime import timedelta, datetime\n",
     "\n",
     "# Data Analysis Libraries\n",
     "import pandas as pd\n",
@@ -22,24 +22,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import timedelta\n",
-    "\n",
-    "\n",
     "class Drifters:\n",
     "    \n",
-    "    def __init__(self):\n",
+    "    def __init__(self, name:str):\n",
+    "        self.name = name\n",
     "        self.data = {}\n",
-    "        self.logsheet = pd.DataFrame()\n",
+    "        self.data_info = {}\n",
     "        \n",
     "    def read_data(self):\n",
     "        pass\n",
     "    \n",
-    "    def read_logsheet(self):\n",
-    "        pass\n",
+    "    def read_logsheet(self, file_path):\n",
+    "        self.logsheet = pd.read_csv(file_path)\n",
+    "        print(\"Here\")\n",
+    "        \n",
+    "        for key in self.data.keys():\n",
+    "            station = self.logsheet[\"Station\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            drog_depth = self.logsheet[\"DrogDepth\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            \n",
+    "            dep_date = self.logsheet[\"DrogDepth\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            dep_time = self.logsheet[\"DrogDepth\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            dep_datetime = datetime.strptime(dep_date + \" \" + dep_time)\n",
+    "            \n",
+    "            recov_date = self.logsheet[\"DrogDepth\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            recov_time = self.logsheet[\"DrogDepth\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            recov_datetime = datetime.strptime(recov_date + \" \" + recov_time)\n",
+    "            \n",
+    "            dep_long = self.logsheet[\"DepLong\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            dep_lat = self.logsheet[\"DepLat\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            \n",
+    "            recov_long = self.logsheet[\"RecovLong\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            recov_lat = self.logsheet[\"RecovLat\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            \n",
+    "            \n",
+    "            info = {\"Station\":station, \"DrogDepth\":drog_depth, \"DepDateTime\":dep_datetime, \"RecovDateTime\":recov_datetime,\n",
+    "                    \"DepLong\":dep_long, \"DepLat\":dep_lat, \"RecovLong\":recov_long, \"RecovLat\":recov_lat}\n",
+    "            \n",
+    "            self.data_info[key] = info\n",
     "    \n",
     "    def time_shift(self, shift_amount:float = 1):\n",
     "        for key in self.data.keys():\n",
@@ -47,6 +70,7 @@
     "    \n",
     "    def extract_data(self):\n",
     "        pass\n",
+    "            \n",
     "    \n",
     "    def compute_velocity(self):\n",
     "        pass\n",
@@ -60,157 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DateTime</th>\n",
-       "      <th>Long</th>\n",
-       "      <th>Lat</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-11-11 09:00:00</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>43.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-11-11 10:00:00</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>43.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-11-11 12:00:00</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>43.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             DateTime  Long   Lat\n",
-       "0 2022-11-11 09:00:00   5.9  43.5\n",
-       "1 2022-11-11 10:00:00   6.0  43.6\n",
-       "2 2022-11-11 12:00:00   6.1  43.7"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Testing code\n",
-    "dftr = Drifters()\n",
-    "dftr.data[119] = pd.DataFrame({\"DateTime\": [\"11-11-2022 9:00:00\", \"11-11-2022 10:00:00\", \"11-11-2022 12:00:00\"], \n",
-    "                               \"Long\": [5.9, 6.0, 6.1], \"Lat\": [43.5, 43.6, 43.7]})\n",
-    "\n",
-    "dftr.data[119][\"DateTime\"] = pd.to_datetime(dftr.data[119][\"DateTime\"])\n",
-    "dftr.data[119].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DateTime</th>\n",
-       "      <th>Long</th>\n",
-       "      <th>Lat</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-11-11 07:00:00</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>43.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-11-11 08:00:00</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>43.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-11-11 10:00:00</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>43.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             DateTime  Long   Lat\n",
-       "0 2022-11-11 07:00:00   5.9  43.5\n",
-       "1 2022-11-11 08:00:00   6.0  43.6\n",
-       "2 2022-11-11 10:00:00   6.1  43.7"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dftr.time_shift(shift_amount=-2)\n",
-    "dftr.data[119].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Testing code\n"
+   ]
   }
  ],
  "metadata": {
