Correcting mistakes in the read_logsheet function

--- a/drifter.ipynb
+++ b/drifter.ipynb
@@ -37,20 +37,24 @@
     "        pass\n",
     "    \n",
     "    def read_logsheet(self, file_path):\n",
+    "        \n",
     "        self.logsheet = pd.read_csv(file_path)\n",
-    "        print(\"Here\")\n",
+    "        \n",
+    "        self.logsheet[\"DepDateTime\"] = self.logsheet.apply(lambda x: x[\"DepDate\"] + \" \" + x[\"DepTime\"])\n",
+    "        self.logsheet[\"RecovDateTime\"] = self.logsheet.apply(lambda x: x[\"RecovDate\"] + \" \" + x[\"RecovTime\"])\n",
+    "        \n",
+    "        self.logsheet.drop(columns=[\"DepDate\", \"DepTime\", \"RecovDate\", \"RecovTime\"], inplace=True)\n",
+    "        \n",
+    "        self.logsheet[\"DepDateTime\"] = pd.to_datetime(self.logsheet[\"DepDateTime\"])\n",
+    "        self.logsheet[\"RecovDateTime\"] = pd.to_datetime(self.logsheet[\"RecovDateTime\"])\n",
     "        \n",
     "        for key in self.data.keys():\n",
     "            station = self.logsheet[\"Station\"][self.logsheet[\"Name\"] == float(key)].values\n",
     "            drog_depth = self.logsheet[\"DrogDepth\"][self.logsheet[\"Name\"] == float(key)].values\n",
     "            \n",
-    "            dep_date = self.logsheet[\"DrogDepth\"][self.logsheet[\"Name\"] == float(key)].values\n",
-    "            dep_time = self.logsheet[\"DrogDepth\"][self.logsheet[\"Name\"] == float(key)].values\n",
-    "            dep_datetime = datetime.strptime(dep_date + \" \" + dep_time)\n",
     "            \n",
-    "            recov_date = self.logsheet[\"DrogDepth\"][self.logsheet[\"Name\"] == float(key)].values\n",
-    "            recov_time = self.logsheet[\"DrogDepth\"][self.logsheet[\"Name\"] == float(key)].values\n",
-    "            recov_datetime = datetime.strptime(recov_date + \" \" + recov_time)\n",
+    "            dep_datetime = self.logsheet[\"DepDateTime\"][self.logsheet[\"Name\"] == float(key)].values\n",
+    "            recov_datetime = self.logsheet[\"RecovDateTime\"][self.logsheet[\"Name\"] == float(key)].values\n",
     "            \n",
     "            dep_long = self.logsheet[\"DepLong\"][self.logsheet[\"Name\"] == float(key)].values\n",
     "            dep_lat = self.logsheet[\"DepLat\"][self.logsheet[\"Name\"] == float(key)].values\n",
@@ -77,8 +81,6 @@
     "    \n",
     "    def plot_trajectory(self):\n",
     "        pass\n",
-    "    \n",
-    "        \n",
     "    "
    ]
   },
