--- a/drifter.ipynb
+++ b/drifter.ipynb
@@ -65,6 +65,8 @@
     "                    try:\n",
     "                        # Select Data to Keep\n",
     "                        data_value = data_value[dtk_val]\n",
+    "                        # Drop columns with missing values\n",
+    "                        data_value.dropna(axis=0)\n",
     "                        # Rename Header Columns\n",
     "                        data_value.columns = ['DateTime','Latitude','Longitude']\n",
     "                        # Convert DateTime\n",
@@ -107,6 +109,8 @@
     "                        try:\n",
     "                            # Select Data to Keep\n",
     "                            data_value = data_value[dtk_val]\n",
+    "                            # Drop columns with missing values\n",
+    "                            data_value.dropna(axis=0)\n",
     "                            # Rename Header Columns\n",
     "                            data_value.columns = ['DateTime','Latitude','Longitude']\n",
     "                            # Convert DateTime\n",
