Completing the read_logsheet function

--- a/drifter.ipynb
+++ b/drifter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +124,10 @@
     "        \n",
     "        self.logsheet = pd.read_csv(file_path)\n",
     "        \n",
-    "        self.logsheet[\"DepDateTime\"] = self.logsheet.apply(lambda x: x[\"DepDate\"] + \" \" + x[\"DepTime\"])\n",
-    "        self.logsheet[\"RecovDateTime\"] = self.logsheet.apply(lambda x: x[\"RecovDate\"] + \" \" + x[\"RecovTime\"])\n",
+    "        self.logsheet.dropna(axis=0, inplace=True)\n",
+    "        \n",
+    "        self.logsheet[\"DepDateTime\"] = self.logsheet.apply(lambda x: str(x[\"DepDate\"]) + \" \" + str(x[\"DepTime\"]), axis = 1)\n",
+    "        self.logsheet[\"RecovDateTime\"] = self.logsheet.apply(lambda x: str(x[\"RecovDate\"]) + \" \" + str(x[\"RecovTime\"]), axis = 1)\n",
     "        \n",
     "        self.logsheet.drop(columns=[\"DepDate\", \"DepTime\", \"RecovDate\", \"RecovTime\"], inplace=True)\n",
     "        \n",
@@ -170,12 +172,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Testing code\n"
+    "# Testing code\n",
+    "D = Drifters(\"2022\")\n",
+    "D.read_data(\"Data/2022/Day1/drifters/\")\n",
+    "D.read_logsheet(\"Data/2022/Day1/drifters-logsheet.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Station</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>DrogDepth</th>\n",
+       "      <th>DepLong</th>\n",
+       "      <th>DepLat</th>\n",
+       "      <th>RecovLong</th>\n",
+       "      <th>RecovLat</th>\n",
+       "      <th>DepDateTime</th>\n",
+       "      <th>RecovDateTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>273</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5º 59.928'</td>\n",
+       "      <td>43º 4.8'</td>\n",
+       "      <td>5º 59.994</td>\n",
+       "      <td>43º 5.342'</td>\n",
+       "      <td>2022-11-11 10:28:00</td>\n",
+       "      <td>2022-11-11 14:05:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>9666</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5º 59.928'</td>\n",
+       "      <td>43º 4.8'</td>\n",
+       "      <td>6º 0.194'</td>\n",
+       "      <td>43º 5.617'</td>\n",
+       "      <td>2022-11-11 10:28:00</td>\n",
+       "      <td>2022-11-11 14:13:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6439</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>5º 59.928'</td>\n",
+       "      <td>43º 4.8'</td>\n",
+       "      <td>5º 59.399'</td>\n",
+       "      <td>43º 5.403'</td>\n",
+       "      <td>2022-11-11 10:28:00</td>\n",
+       "      <td>2022-11-11 14:10:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>274</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5º 59.072'</td>\n",
+       "      <td>43º 4.695'</td>\n",
+       "      <td>5º 59.423'</td>\n",
+       "      <td>43º 4.929'</td>\n",
+       "      <td>2022-11-11 10:42:00</td>\n",
+       "      <td>2022-11-11 13:39:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>8436</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5º 59.072'</td>\n",
+       "      <td>43º 4.695'</td>\n",
+       "      <td>5º 59.282'</td>\n",
+       "      <td>43º 4.958</td>\n",
+       "      <td>2022-11-11 10:42:00</td>\n",
+       "      <td>2022-11-11 13:38:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3368</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>5º 59.072'</td>\n",
+       "      <td>43º 4.695'</td>\n",
+       "      <td>5º 59.115'</td>\n",
+       "      <td>43º 4.993</td>\n",
+       "      <td>2022-11-11 10:42:00</td>\n",
+       "      <td>2022-11-11 13:35:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7230</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>5º 58.405'</td>\n",
+       "      <td>43º 4.644'</td>\n",
+       "      <td>5º 59.158'</td>\n",
+       "      <td>43º 4.44'</td>\n",
+       "      <td>2022-11-11 11:06:00</td>\n",
+       "      <td>2022-11-11 13:56:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>119</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5º 58.405'</td>\n",
+       "      <td>43º 4.644'</td>\n",
+       "      <td>5º 59.192'</td>\n",
+       "      <td>43º 4.552'</td>\n",
+       "      <td>2022-11-11 11:06:00</td>\n",
+       "      <td>2022-11-11 13:57:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3</td>\n",
+       "      <td>277</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5º 58.405'</td>\n",
+       "      <td>43º 4.644'</td>\n",
+       "      <td>5º 59.158'</td>\n",
+       "      <td>43º 4.44'</td>\n",
+       "      <td>2022-11-11 11:06:00</td>\n",
+       "      <td>2022-11-11 13:56:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2052</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>6º 0.605'</td>\n",
+       "      <td>42º 59.533'</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>2022-11-11 11:43:00</td>\n",
+       "      <td>2022-11-11 12:14:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Station  Name  DrogDepth      DepLong       DepLat   RecovLong    RecovLat  \\\n",
+       "0        1   273        1.0  5º 59.928'      43º 4.8'   5º 59.994  43º 5.342'   \n",
+       "1        1  9666        0.0  5º 59.928'      43º 4.8'   6º 0.194'  43º 5.617'   \n",
+       "2        1  6439        0.6  5º 59.928'      43º 4.8'  5º 59.399'  43º 5.403'   \n",
+       "3        2   274        1.0   5º 59.072'   43º 4.695'  5º 59.423'  43º 4.929'   \n",
+       "4        2  8436        0.0   5º 59.072'   43º 4.695'  5º 59.282'   43º 4.958   \n",
+       "5        2  3368        0.6   5º 59.072'   43º 4.695'  5º 59.115'   43º 4.993   \n",
+       "6        3  7230        0.6   5º 58.405'   43º 4.644'  5º 59.158'   43º 4.44'   \n",
+       "7        3   119        0.0   5º 58.405'   43º 4.644'  5º 59.192'  43º 4.552'   \n",
+       "8        3   277        1.0   5º 58.405'   43º 4.644'  5º 59.158'   43º 4.44'   \n",
+       "9        4  2052        0.6    6º 0.605'  42º 59.533'           -           -   \n",
+       "\n",
+       "          DepDateTime       RecovDateTime  \n",
+       "0 2022-11-11 10:28:00 2022-11-11 14:05:00  \n",
+       "1 2022-11-11 10:28:00 2022-11-11 14:13:00  \n",
+       "2 2022-11-11 10:28:00 2022-11-11 14:10:00  \n",
+       "3 2022-11-11 10:42:00 2022-11-11 13:39:00  \n",
+       "4 2022-11-11 10:42:00 2022-11-11 13:38:00  \n",
+       "5 2022-11-11 10:42:00 2022-11-11 13:35:00  \n",
+       "6 2022-11-11 11:06:00 2022-11-11 13:56:00  \n",
+       "7 2022-11-11 11:06:00 2022-11-11 13:57:00  \n",
+       "8 2022-11-11 11:06:00 2022-11-11 13:56:00  \n",
+       "9 2022-11-11 11:43:00 2022-11-11 12:14:00  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.logsheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
