Updating some slight changes

--- a/drifter.ipynb
+++ b/drifter.ipynb
@@ -14,6 +14,7 @@
     "import os\n",
     "\n",
     "# Data Analysis Libraries\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "# Graph plotting libraries\n",
@@ -169,7 +170,6 @@
     "            df_lat = np.array(data[\"Latitude\"])\n",
     "            df_long = np.array(data[\"Longitude\"])\n",
     "            df_time = data[\"DateTime\"]\n",
-    "            # df_time = pd.to_datetime(df_time.astype(str), format='%H:%M:%S')\n",
     "            \n",
     "            # compute delta time\n",
     "            d_time = np.array(df_time[1:]) - df_time[:-1]\n",
