Creating method for exporting data

--- a/Python/drifter.ipynb
+++ b/Python/drifter.ipynb
@@ -335,6 +335,9 @@
     "        pass\n",
     "    \n",
     "    def plot_lineplot(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def export_cleaned_data(self):\n",
     "        pass"
    ]
   },
